--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
----
-layout: default
-title: Home
----
-
-<div class="hero">
-  <img src="{{ site.baseurl }}{{ site.hero.image }}" />
-  <p>{{ site.hero.caption }}</p>
-</div>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Document</title>
+</head>
+<body>
+  <h1>Welcome to my Blog</h1>
+</body>
+</html>
